# acevo-obs-plugin

./: .gitignore  CMakeLists.txt  README.md
injector/: CMakeLists.txt  dllmain.cpp
obs-plugin/: CMakeLists.txt  plugin.cpp
shared/: ipc.h  render_pass_data.h
tools/: inject.cpp
